--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://khanhngan1491:bIkUKHyQcpwD15XU@netflix.feedk.mongodb.net/netflix_db?retryWrites=true&w=majority&appName=netflix
 PORT=5000
+JWT_SECRET=netflix_secret_decode
+NODE_ENV=development
